# Parallel-Image-Processing-Pipeline-Operating-Systems-Project-

./: README.md
PIPP with GUI/: CMakeLists.txt
PIPP with GUI/src/: buffer.h  gui.cpp  gui.h  main.cpp  performance.cpp  pipeline.h
main/: CMakeLists.txt
main/ImagePipeline/: CMakeLists.txt
main/ImagePipeline/gui/: ImagePipelineGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h
main/ImagePipeline/include/: CircularBuffer.h  ImageTask.h  Stages.h  ThreadPool.h
main/ImagePipeline/src/:  ThreadPool.cpp  CircularBuffer.cpp  Enhancer.cpp  Filter.cpp  Loader.cpp  Saver.cpp  Utils.cpp  main.cpp
main/src/: filters.cpp  filters.h  gui.cpp  main.cpp  performance.h  pipeline.cpp
